--- a/src/app/styles/variables.scss
+++ b/src/app/styles/variables.scss
@@ -1,25 +1,21 @@
-$color-white: #ffffff;
-$color-black: #000000;
-$color-blue-main: #3e66fb;
-$color-gray-main: #000000af;
-$color-gray-light: #c2c9d1;
-$color-red-main: #f03738;
-$color-green-main: #3cc13b;
-
 $border-radius: 8px;
 $border-width: 1px;
+
+$padding-0: 0;
+$padding-4: 4px;
+$padding-6: 6px;
+$padding-8: 8px;
+$padding-10: 10px;
 
 $font-family: 'Montserrat', sans-serif;
 
 :export {
-    colorWhite: $color-white;
-    colorBlack: $color-black;
-    colorBlueMain: $color-blue-main;
-    colorGrayMain: $color-gray-main;
-    colorGrayLight: $color-gray-light;
-    colorRedMain: $color-red-main;
-    colorGreenMain: $color-green-main;
-    borderRadius: $border-radius;
-    borderWidth: $border-width;
-    fontFamily: $font-family;
+    border-radius: $border-radius;
+    border-width: $border-width;
+    padding-0: $padding-0;
+    padding-4: $padding-4;
+    padding-6: $padding-6;
+    padding-8: $padding-8;
+    padding-10: $padding-10;
+    font-family: $font-family;
 }
