--- a/src/shared/ui/basic/BaseField/BaseField.module.scss
+++ b/src/shared/ui/basic/BaseField/BaseField.module.scss
@@ -1,3 +1,4 @@
+@use '@/app/styles/colors' as *;
 @use '@/app/styles/variables' as *;
 @use '@/app/styles/mixins' as *;
 
@@ -28,26 +29,26 @@
 
     &__before,
     &__after {
+        flex-shrink: 0;
         display: flex;
         justify-content: center;
         align-items: center;
-        flex-shrink: 0;
     }
 
     &__before {
-        padding-left: var(--padding-outer, 0);
+        padding-left: $padding-8;
     }
 
     &__after {
-        padding-right: var(--padding-outer, 0);
+        padding-right: $padding-8;
     }
 
     & &__inner {
-        display: flex;
         flex-grow: 1;
+        display: flex;
         align-items: center;
         min-height: 100%;
-        padding: 10px 8px;
+        padding: $padding-10 $padding-8;
         width: 100%;
         height: 100%;
         background: inherit;
@@ -55,12 +56,5 @@
         outline: none;
         font-size: 14px;
         line-height: 20px;
-        -moz-appearance: textfield;
-
-        &::-webkit-inner-spin-button,
-        &::-webkit-outer-spin-button {
-            -webkit-appearance: none;
-            margin: 0;
-        }
     }
 }
